--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
 
   cupertino_icons: ^1.0.2
     #  firebase integration
-  firebase_core: ^1.2.0
-  cloud_firestore: ^2.2.0
-  firebase_storage: ^8.1.3
+#  firebase_core: ^1.2.0
+#  cloud_firestore: ^2.2.0
+#  firebase_storage: ^8.1.3
 
 dev_dependencies:
   flutter_test:
