--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  #  zoom receipt image
+  photo_view: ^0.11.1
+#  url launcher
+  url_launcher: ^6.0.6
     #  firebase integration
 #  firebase_core: ^1.2.0
 #  cloud_firestore: ^2.2.0
@@ -28,7 +32,6 @@ flutter:
 
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+#    - images/a_dot_ham.jpeg
