added pull to refresh

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "aloysiuskimbowa",
-    "short_name": "aloysiuskimbowa",
+    "name": "Aloysius",
+    "short_name": "Aloysius",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
