--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,10 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+#  try hovering
+  hovering: ^1.0.4
+#  remove # from URL
+  url_strategy: ^0.2.0
   #  zoom receipt image
   photo_view: ^0.11.1
 #  url launcher
